--- a/css/components/_shop-gear-info.scss
+++ b/css/components/_shop-gear-info.scss
@@ -1,32 +1,42 @@
 .shop__gears-content {
     background-color: rgba($color: #fff, $alpha: 0.8);
-    display: none;
     position: absolute;
     z-index: 12;
     left: 60%;
-    padding: 28px 36px;
+    padding: 25px 28px;
+    float: right;
+    flex-direction: row;
     border-radius: 4px;
-}
-
-.content__info {
-    z-index: 12;
+    display: none;
+    // display: block;
+    width: 250px;   // увеличение блока
+    // height: 300px;
 }
 
 .content__info li {
     text-decoration: none;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    // justify-content: space-between;
+    margin-bottom: rem(28px);
+    align-items: center;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+    
 }
 
 .info__icon--icon {
     height: 32px;
     width: 32px;
+    margin-right: rem(16px);
 }
 
 .info__desc {
     display: flex;
-    justify-content: flex-start;
+    // justify-content: flex-start;
+    flex: 1;
 }
 
 .info__desc, .info__prop {
