--- a/css/components/_shop.scss
+++ b/css/components/_shop.scss
@@ -107,6 +107,7 @@
 .shop__row {
     display: flex;
     margin-bottom: rem(14px);
+    position: relative;
 
     @include tablets {
         margin-bottom: 0;
