added js for reviews section

--- a/css/components/_reviews.scss
+++ b/css/components/_reviews.scss
@@ -89,3 +89,11 @@
     justify-content: center;
     position: relative;
 }
+
+.reviews__item {
+    display: none;
+
+    &--active {
+        display: block;
+    }
+}
