--- a/css/components/_shop-gear-info.scss
+++ b/css/components/_shop-gear-info.scss
@@ -10,7 +10,7 @@
     border-radius: 4px;
     display: none;
     // display: block;
-    width: 250px;   // увеличение блока
+    width: rem(250px);   // увеличение блока
     // height: 300px;
 }
 
