--- a/css/main.scss
+++ b/css/main.scss
@@ -53,6 +53,7 @@ $z-hamburger: 100;
 @import "components/contacts";
 @import "components/socials";
 @import "components/shop";
+@import "components/team";
 @import "components/menu-fullscreen";
 @import "components/slider";
 @import "components/shop-gear-info";
