--- a/css/components/_order.scss
+++ b/css/components/_order.scss
@@ -1,7 +1,8 @@
 .order__section {
     color: #fff;
     position: relative;
-    background: url("../img/order.png") center center/cover no-repeat;;
+    background: url("../img/order.png") center center/cover no-repeat;
+    ;
     margin: 0;
 
     &:before {
