--- a/css/main.css
+++ b/css/main.css
@@ -1061,6 +1061,12 @@ button {
 .shop__section {
   background-color: #f5f5f5;
 }
+.shop__section .bx-wrapper {
+  border: 0;
+  background: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
 
 .shop__gears-wrapper {
   border-radius: 4px;
@@ -1207,7 +1213,8 @@ button {
   }
 }
 
-.shop__feauter-charge, .shop__feauter-weight {
+.shop__feauter-charge,
+.shop__feauter-weight {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1227,7 +1234,8 @@ button {
       align-content: space-around;
 }
 @media screen and (max-width: 768px) {
-  .shop__feauter-charge, .shop__feauter-weight {
+  .shop__feauter-charge,
+.shop__feauter-weight {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -webkit-box-flex: 0;
@@ -1235,7 +1243,8 @@ button {
             flex: none;
     margin-right: 4.7777777778rem;
   }
-  .shop__feauter-charge:last-child, .shop__feauter-weight:last-child {
+  .shop__feauter-charge:last-child,
+.shop__feauter-weight:last-child {
     margin-right: 0;
   }
 }
@@ -1436,10 +1445,6 @@ button {
   text-decoration: none;
 }
 
-.slider {
-  position: initial;
-}
-
 .shop__arrow {
   background: url("./../img/icons/arrow.svg") center center no-repeat;
   background-size: contain;
@@ -1455,7 +1460,7 @@ button {
   }
 }
 .shop__arrow--right {
-  right: -5%;
+  right: -2%;
 }
 @media screen and (max-width: 768px) {
   .shop__arrow--right {
@@ -1468,7 +1473,7 @@ button {
   }
 }
 .shop__arrow--left {
-  left: -5%;
+  left: -2%;
   -webkit-transform: rotate(-180deg);
           transform: rotate(-180deg);
 }
@@ -1538,7 +1543,8 @@ button {
           flex: 1;
 }
 
-.info__desc, .info__prop {
+.info__desc,
+.info__prop {
   font-size: 0.8888888889rem;
 }
 
