quickfix shop section

--- a/css/main.scss
+++ b/css/main.scss
@@ -54,6 +54,7 @@ $z-hamburger: 100;
 @import "components/socials";
 @import "components/shop";
 @import "components/team";
+// @import "components/modal";
 @import "components/menu-fullscreen";
 @import "components/slider";
 @import "components/shop-gear-info";
