--- a/css/main.css
+++ b/css/main.css
@@ -1452,6 +1452,7 @@ button {
   height: 1.5rem;
   position: absolute;
   top: 50%;
+  z-index: 15;
 }
 @media screen and (max-width: 768px) {
   .shop__arrow {
