added worked request for modal

--- a/css/components/_form.scss
+++ b/css/components/_form.scss
@@ -71,6 +71,10 @@
         outline: none;
     }
 
+    &.input-error {
+        border-color: red;
+    }
+
     @include tablets {
         padding: rem(8px) rem(10px);
     }
