--- a/src/styles/components/_benefits.scss
+++ b/src/styles/components/_benefits.scss
@@ -24,7 +24,7 @@
         transform: translate(50%);
 
         @media screen and (min-width: 768px) {
-            content: url("../img/seporator.png");
+            content: url("./../images/seporator.png");
         }
     }
 
