--- a/src/styles/components/_shop.scss
+++ b/src/styles/components/_shop.scss
@@ -11,7 +11,7 @@
         position: absolute;
         bottom: rem(-23px);
         right: 10%;
-        content: url("../img/box.png");
+        content: url("./../images/box.png");
         z-index: 1;
     }
 }
