--- a/src/styles/components/_order.scss
+++ b/src/styles/components/_order.scss
@@ -1,13 +1,13 @@
 .order__section {
     color: #fff;
     position: relative;
-    background: url("../img/order.png") center center/cover no-repeat;
+    background: url("./../images/order.png") center center/cover no-repeat;
     margin: 0;
 
     &:before {
         position: absolute;
         top: rem(-23px);
         right: 10%;
-        content: url("../img/polygon.png");
+        content: url("./../images/polygon.png");
     }
 }
