--- a/src/styles/components/_radio.scss
+++ b/src/styles/components/_radio.scss
@@ -18,7 +18,7 @@
             border-radius: 0;
 
             &::before {
-                background: url("../img/icons/checkmark.png") center center no-repeat;
+                background: url("./../images/icons/checkmark.png") center center no-repeat;
             }
         }
     }
