--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -1,7 +1,7 @@
 .shop__arrow {
   // я ничего здесь не понимаю 
   // и я вообще не представляю как мне поставить нормально эти стрелки.
-  background: url("./../img/icons/arrow.svg") center center no-repeat;
+  background: url("././../images/icons/arrow.svg") center center no-repeat;
   background-size: contain;
   width: rem(13px);
   height: rem(27px);
