--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,3 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css");
 @import url("https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,400i,700&display=swap&subset=cyrillic");
 @import url("https://fonts.googleapis.com/css?family=Play");
 html {
@@ -113,7 +112,7 @@ button {
   position: absolute;
   bottom: -1.6666666667rem;
   right: 10%;
-  content: url("../img/plank.png");
+  content: url("./../images/plank.png");
 }
 
 .hero__title-section {
@@ -144,7 +143,7 @@ button {
     content: "";
     width: 17.9444444444rem;
     height: 17.9444444444rem;
-    background: url("../img/tablets-background.png") center center/contain no-repeat;
+    background: url("./../images/tablets-background.png") center center/contain no-repeat;
     margin-bottom: 3.5555555556rem;
   }
 }
@@ -168,7 +167,7 @@ button {
           justify-content: space-between;
   height: 100%;
   padding: 1.3333333333rem 0 2.7777777778rem;
-  background: url("../img/background.png") right center/50% auto no-repeat;
+  background: url("./../images/background.png") right center/50% auto no-repeat;
 }
 @media screen and (max-width: 768px) {
   .hero__container {
@@ -509,7 +508,7 @@ button {
 }
 @media screen and (min-width: 768px) {
   .benefits__item:before {
-    content: url("../img/seporator.png");
+    content: url("./../images/seporator.png");
   }
 }
 .benefits__item:first-child {
@@ -577,7 +576,7 @@ button {
   position: absolute;
   bottom: -1.6666666667rem;
   left: 2.6666666667rem;
-  content: url("../img/triangle.png");
+  content: url("./../images/triangle.png");
   z-index: 1;
 }
 
@@ -736,14 +735,14 @@ button {
 .order__section {
   color: #fff;
   position: relative;
-  background: url("../img/order.png") center center/cover no-repeat;
+  background: url("./../images/order.png") center center/cover no-repeat;
   margin: 0;
 }
 .order__section:before {
   position: absolute;
   top: -1.2777777778rem;
   right: 10%;
-  content: url("../img/polygon.png");
+  content: url("./../images/polygon.png");
 }
 
 .form {
@@ -901,7 +900,7 @@ button {
   border-radius: 0;
 }
 .radio--checkbox .radio__visible::before {
-  background: url("../img/icons/checkmark.png") center center no-repeat;
+  background: url("./../images/icons/checkmark.png") center center no-repeat;
 }
 .radio:last-child {
   padding-right: 0;
@@ -947,7 +946,7 @@ button {
   position: absolute;
   bottom: -2.7777777778rem;
   left: 4.4444444444rem;
-  content: url("../img/ball.png");
+  content: url("./../images/ball.png");
 }
 
 .fixed-menu {
@@ -1007,7 +1006,7 @@ button {
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("../img/map.png") center center/cover no-repeat;
+  background: url("./../images/map.png") center center/cover no-repeat;
 }
 
 .contacts {
@@ -1074,7 +1073,7 @@ button {
   position: absolute;
   bottom: -1.2777777778rem;
   right: 10%;
-  content: url("../img/box.png");
+  content: url("./../images/box.png");
   z-index: 1;
 }
 
@@ -1493,7 +1492,7 @@ button {
 }
 
 .shop__arrow {
-  background: url("./../img/icons/arrow.svg") center center no-repeat;
+  background: url("././../images/icons/arrow.svg") center center no-repeat;
   background-size: contain;
   width: 0.7222222222rem;
   height: 1.5rem;
