new uses for dist html

--- a/src/styles/components/_benefits-section.scss
+++ b/src/styles/components/_benefits-section.scss
@@ -4,7 +4,7 @@
         position: absolute;
         bottom: rem(-30px);
         left: rem(48px);
-        content: url("./../images/triangle.png");
+        content: url("./img/content/deco/triangle.png");
         z-index: 1;
     }
 }
