--- a/src/styles/components/_map.scss
+++ b/src/styles/components/_map.scss
@@ -8,5 +8,5 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("./../images/map.png") center center / cover no-repeat;
+  background: url("./img/content/map.png") center center / cover no-repeat;
 }
