--- a/src/styles/components/_reviews__section.scss
+++ b/src/styles/components/_reviews__section.scss
@@ -5,6 +5,6 @@
         position: absolute;
         bottom: rem(-50px);
         left: rem(80px);
-        content: url("./../images/ball.png");
+        content: url("./img/content/deco/ball.png");
     }
 }
