--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -9,7 +9,7 @@
         position: absolute;
         bottom: rem(-30px);
         right: 10%;
-        content: url("./../images/plank.png");
+        content: url("./img/content/deco/plank.png");
     }
 }
 
@@ -29,7 +29,7 @@
             content: "";
             width: rem(323px);
             height: rem(323px);
-            background: url("./../images/tablets-background.png") center center / contain no-repeat;
+            background: url("./../img/content/hero/tablets-background.png") center center / contain no-repeat;
             margin-bottom: rem(64px);
         }
     }
@@ -47,7 +47,7 @@
     justify-content: space-between;
     height: 100%;
     padding: rem(24px) 0 rem(50px);
-    background: url("./../images/background.png") right center / 50% auto no-repeat;
+    background: url("./../img/content/hero/background.png") right center / 50% auto no-repeat;
 
     @include tablets {
         background: none;
