add youtube section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -57,6 +57,7 @@ $z-hamburger: 100;
 @import "components/shop";
 @import "components/team";
 @import "components/modal";
+@import "components/ytframe";
 @import "components/menu-fullscreen";
 @import "components/slider";
 @import "components/shop-gear-info";
